[package]
name = "stinger-mqtt-trait"
version = "0.2.3"
edition = "2021"
authors = ["pearmaster"]
description = "Rust trait for defining an interface for a MQTT client"
license = "MIT"
repository = "https://github.com/pearmaster/stinger-mqtt-trait"

[dependencies]
tokio = { version = "1.48.0", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bytes = "1.10.1"
derive_builder = "0.20"
async-trait = "0.1.89"
rumqttc = { version = "0.24", optional = true }

[features]
validation = ["tokio/time", "tokio/rt", "tokio/process", "dep:rumqttc"]
mock_client = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
